@@ -1,12 +1,11 @@
 package com.example.parking.service.implementation;
 
-
-import com.example.parking.model.ReservationRequest;
 import com.example.parking.repository.ParkingReservationRepository;
+import lombok.RequiredArgsConstructor;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.TestConstructor;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -15,61 +14,68 @@ import java.util.concurrent.Callable;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
+import static com.example.parking.util.ParkingServiceTestHelper.createReservationRequest;
+import static com.example.parking.util.TestConstants.SHOULD_NOT_EXCEED_80_SUCCESSFUL_RESERVATIONS;
+import static com.example.parking.util.TestConstants.THREAD_POOL_SIZE;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-/**
- * Integration test to verify concurrency control with real H2 DB.
- */
 @SpringBootTest
+@RequiredArgsConstructor
+@TestConstructor(autowireMode = TestConstructor.AutowireMode.ALL)
 class ParkingServiceConcurrencyTest {
 
-    @Autowired
-    private ParkingServiceImpl parkingService;
+    private final ParkingServiceImpl parkingService;
 
-    @Autowired
-    private ParkingReservationRepository repository;
+    private final ParkingReservationRepository repository;
 
     @BeforeEach
     void cleanUp() {
-        // Clear existing reservations
         repository.deleteAll();
     }
 
     @Test
     void testConcurrentReservations() throws InterruptedException {
-        // We'll attempt to create 85 reservations for the same time slot,
-        // but only 80 should succeed due to the 80% capacity rule (80% of 100).
         var startTime = LocalDateTime.now().plusHours(2);
+        var tasks = createReservationTasks(startTime, 85);
 
-        // Build a list of tasks that call createReservation
-        List<Callable<Boolean>> tasks = new ArrayList<>();
-        for (int i = 0; i < 85; i++) {
+        try (var executor = Executors.newFixedThreadPool(THREAD_POOL_SIZE)) {
+            var results = executor.invokeAll(tasks);
+
+            executor.shutdown();
+            if (!executor.awaitTermination(1, TimeUnit.MINUTES)) {
+                System.err.println("Warning: Some reservation tasks did not complete in time. Forcing shutdown...");
+                executor.shutdownNow();
+            }
+
+            long successCount = results.stream()
+                    .map(future -> {
+                        try {
+                            return future.get();
+                        } catch (Exception e) {
+                            System.err.println("Error processing reservation task: " + e.getMessage());
+                            return false;
+                        }
+                    })
+                    .filter(success -> success)
+                    .count();
+
+            assertTrue(successCount <= 80, SHOULD_NOT_EXCEED_80_SUCCESSFUL_RESERVATIONS);
+        }
+    }
+
+    private List<Callable<Boolean>> createReservationTasks(LocalDateTime startTime, int numberOfTasks) {
+        var tasks = new ArrayList<Callable<Boolean>>();
+        for (var i = 0; i < numberOfTasks; i++) {
             tasks.add(() -> {
                 try {
-                    parkingService.createReservation(new ReservationRequest(startTime, "PLATE" + Thread.currentThread().getId()));
-                    return true;  // success
+                    var plate = "PLATE" + Thread.currentThread().threadId();
+                    parkingService.createReservation(createReservationRequest(startTime, plate));
+                    return true;
                 } catch (Exception ex) {
-                    // If it fails (ParkingFullException, etc.), return false
                     return false;
                 }
             });
         }
-
-        var executor = Executors.newFixedThreadPool(20);
-        var results = executor.invokeAll(tasks);
-        executor.shutdown();
-        executor.awaitTermination(1, TimeUnit.MINUTES);
-
-        // Count how many succeeded
-        long successCount = results.stream().filter(f -> {
-            try {
-                return f.get();
-            } catch (Exception e) {
-                return false;
-            }
-        }).count();
-
-        // We expect that no more than 80 reservations can succeed
-        assertTrue(successCount <= 80, "Should not exceed 80 successful reservations");
+        return tasks;
     }
 }
